--- a/app/Resources/views/admin/banner/index.html.twig
+++ b/app/Resources/views/admin/banner/index.html.twig
@@ -65,7 +65,7 @@
                         <img src="{{ vich_uploader_asset(banner, 'imageFile') }}" alt="{{ banner.imageName }}" width="100"/>
                     </td>
                     <td>
-                        {% if banner.isEnabled == '1' %}
+                        {% if banner.isEnabled %}
                             <span class="label label-sm label-success">
                                 <i class="fa fa-check"></i>
                             </span>
