--- a/app/Resources/views/admin/downloads/new.html.twig
+++ b/app/Resources/views/admin/downloads/new.html.twig
@@ -58,19 +58,19 @@
                                             <span> Adicionar arquivos </span>
                                             <input type="file" name="downloadFile[]" multiple="">
                                         </span>
-                                        <button type="submit" class="btn btn-primary start">
+                                        {#<button type="submit" class="btn btn-primary start">
                                             <i class="fa fa-upload"></i>
                                             <span> Iniciar upload </span>
-                                        </button>
+                                        </button>#}
                                         <button type="reset" class="btn btn-warning cancel">
                                             <i class="fa fa-remove"></i>
                                             <span> Cancelar upload </span>
                                         </button>
-                                        <button type="button" class="btn btn-danger delete">
+                                        {#<button type="button" class="btn btn-danger delete">
                                             <i class="fa fa-trash"></i>
                                             <span> Deletar </span>
                                         </button>
-                                        <input type="checkbox" class="toggle">
+                                        <input type="checkbox" class="toggle">#}
                                         <!-- The global file processing state -->
                                         <span class="fileupload-process"> </span>
                                     </div>
