--- a/app/Resources/views/admin/downloads/new.html.twig
+++ b/app/Resources/views/admin/downloads/new.html.twig
@@ -136,7 +136,7 @@
             {% if (!i) { %}
                 <button class="btn btn-warning cancel">
                     <i class="glyphicon glyphicon-ban-circle"></i>
-                    <span>Cancel</span>
+                    <span>Cancelar</span>
                 </button>
             {% } %}
         </td>
@@ -182,7 +182,7 @@
             {% } else { %}
                 <button class="btn btn-warning cancel">
                     <i class="glyphicon glyphicon-ban-circle"></i>
-                    <span>Cancel</span>
+                    <span>Cancelar</span>
                 </button>
             {% } %}
         </td>
