--- a/app/Resources/views/site/_partials/_banner.html.twig
+++ b/app/Resources/views/site/_partials/_banner.html.twig
@@ -16,23 +16,23 @@
                 data-ease="easeOutExpo"
                 data-effect="bottom(40)"
             >
-                Tenha Controle Total Sobre sua Empresa<br>
-                <strong>Nós Temos a <em>Solução</em></strong>
+                Tenha <strong><em>Controle Total</em></strong> Sobre sua Empresa{#<br>
+                <strong>Nós Temos a <em>Solução</em></strong>#}
             </h1>
 
             <h4 class="ms-layer stext7"
-                style="left: 130px; top: 470px;"
+                style="left: 130px; top: 420px;"
                 data-type="text"
                 data-duration="900"
                 data-delay="2500"
                 data-ease="easeOutExpo"
                 data-effect="bottom(40)"
             >
-                <strong>PAF-RC</strong> - Sistema de Gestão Empresarial para quem não tem tempo a perder
+                <strong>Sistema de Gestão Empresarial para quem não tem tempo a perder</strong>
             </h4>
 
             <div class="ms-layer"
-                 style="left: 130px; top: 550px;"
+                 style="left: 130px; top: 510px;"
                  data-type="text"
                  data-delay="3500"
                  data-ease="easeOutExpo"
