--- a/app/Resources/views/site/homepage/index.html.twig
+++ b/app/Resources/views/site/homepage/index.html.twig
@@ -21,9 +21,9 @@
         <div class="container">
 
             <h2>
-                Conheça o <strong>PAF-RC</strong>
-                <b>PAF-RC trata-se de um produto desenvolvido pela RC INFORMÁTICA, 100% compatível com PAF-ECF, para auxiliar as empresas na gestão
-                    do negócio.</b>
+                Conheça o Sistema <strong>PAF-RC</strong>
+                <b>Trata-se de um produto 100% compatível com PAF-ECF, que auxilia sua empresa na gestão do
+                    negócio como um todo.</b>
             </h2>
 
             <div class="margin_top3"></div>
@@ -34,8 +34,8 @@
 
                 <h5 class="caps">Automação Comercial</h5>
 
-                <p>O PAF-RC é uma ferramenta que proporciona maior competividade, eficiência e otimização dos processos
-                    fiscais e de gerenciamento deixando a sua empresa mais eficiente e pronta para o mercado.</p>
+                <p>Proporciona maior competividade, eficiência e otimização dos processos fiscais e de
+                    gerenciamento, deixando a sua empresa mais eficiente e pronta para o mercado.</p>
 
             </div>
 
@@ -45,8 +45,8 @@
 
                 <h5 class="caps">Personalização</h5>
 
-                <p>Interface amigável e usual, aderente às necessidades da organização. Com treinamento aos setores que
-                    utilizarão o PAF-RC e atendimento exclusivo para cada caso.</p>
+                <p>Interface amigável, aderente às necessidades da sua empresa. Treinamos os setores que
+                    utilizarão o PAF-RC, e damos atendimento exclusivo para cada caso.</p>
 
             </div>
 
@@ -56,8 +56,7 @@
 
                 <h5 class="caps">Mais Controle e Rapidez</h5>
 
-                <p>O PAF-RC foi desenvolvido com o intuito de fornecer informações gerenciais rápidas e confiáveis para
-                    auxiliar a gestão empresarial dos mais diversos segmentos de mercado. </p>
+                <p>Fornecemos informações gerenciais rápidas e confiáveis para auxiliar a gestão do seu negócio. </p>
 
             </div>
 
@@ -70,7 +69,7 @@
         <div class="container">
 
             <h2 class="white">
-                Nossos Clientes
+                Alguns de nossos clientes
                 <b></b>
             </h2>
 
@@ -114,12 +113,12 @@
                 Adaptável para empresas de qualquer porte ou segmento
             </h1>
             <h4 class="animate fadeInDown" data-anim-type="fadeInDown" data-anim-delay="250">
-                Solicite <strong>AGORA</strong> análise completa das necessidades em sua empresa
-                e orçamento sem compromisso
+                Solicite <strong>AGORA</strong> análise completa das necessidades em sua empresa. O orçamento é sem
+                compromisso!
             </h4>
             <br>
             <a href="#" class="readmore_but9 animate zoomIn" data-anim-type="zoomIn" data-anim-delay="750">
-                <i class="fa fa-check"></i> <strong>SOLICITAR</strong>
+                <i class="fa fa-check"></i> <strong>SOLICITAR ANÁLISE</strong>
             </a> &nbsp;&nbsp;&nbsp;
 
         </div>
