--- a/app/Resources/views/site/sobre/index.html.twig
+++ b/app/Resources/views/site/sobre/index.html.twig
@@ -16,14 +16,27 @@
             <br><br>
             <div class="alileft"><h3>Quem Somos</h3></div>
             <br>
-            <p>A RC Informática está há 18 anos no mercado lançando e aprimorando produtos que gerenciam e facilitam
-                a
-                tomada de decisões em empresas que precisam de respostas eficientes.
-                Atenda as demandas do mercado e às mudanças na legislação, mantemos profissionais especializados e
-                em
-                acompanhamento full time para garantir atualizações à frente da concorrência, garantindo resposta
-                rápida
-                e resultados para que sua empresa se mantenha competitiva e você tenha muito mais tranquilidade.
+            <p>A RC Informática é especializada em desenvolvimento de sistemas para empresas.</p>
+            <br>
+            <p>Atuando desde 1999 nesse mercado, a empresa adquiriu experiência suficiente para lançar e
+                aprimorar produtos que facilitam as tomadas de decisão no dia a dia das empresas de diversos
+                segmentos.</p>
+            <br>
+            <p>Com todos esses anos de expertise, desenvolveu o Sistema PAF-RC, produto 100% compatível
+                com PAF-ECF (Programa Aplicativo Fiscal - Emissor de Cupom Fiscal), que auxilia empresas dos
+                mais variados segmentos na gestão do negócio.</p>
+            <br>
+            <p>Utilizando as linguagens Xharbour, C++ e Xbdase, os sistemas da RC são soluções para
+                automatizar processos, eliminando erros humanos e aumentando a produtividade das
+                empresas.</p>
+            <br>
+            <p>A RC Informática possui uma carteira de mais de 600 clientes ativos, de segmentos e setores
+                variados, e se mantém atenta às demandas do mercado e às mudanças na legislação,
+                mantendo profissionais especializados e em acompanhamento full time para garantir
+                atualizações rápidas.</p>
+            <br>
+            <p>Por isso a RC Informática está altamente preparada para oferecer a melhor solução para cada
+                tipo de negócio, respeitando as regras e culturas de cada empresa.
             </p>
 
         </div>
@@ -33,7 +46,7 @@
 
     <div class="feature_section19">
         <div class="container">
-            <h1>Nossos Clientes</h1>
+            <h1>O que nossos clientes dizem</h1>
             <br/><br/>
             <div class="clearfix"></div>
 
@@ -46,42 +59,21 @@
 
                                 <div class="one_half">
                                     <div class="pesbox">
-                                        <h5>Como está o atendimento da RC Informática?</h5>
-                                        <p> - Bem prático, sem burocracia.</p>
-                                        <br>
-                                        <h5>Como você caracteriza o nível de conhecimento dos nossos funcionários?</h5>
-                                        <p> - Nota 10</p>
-                                        <br>
-                                        <h5>Qual a sua necessidade em relação a informática hoje?</h5>
-                                        <p> - A informática ela é muito necessária para mim, pois dependo dela para tudo
-                                            que faço.</p>
-                                        <br>
-                                        <h5>Você indicaria nosso produtos a outros clientes?</h5>
-                                        <p> - Sim, sem duvida, pois confio na qualidade da RC Informártica.</p>
+                                        <h5>"Tudo bem prático, sem burocracia. O nível de conhecimento da equipe de
+                                            atendimento é nota 10. Confio na qualidade da RC Informática."</h5>
                                     </div>
                                     <div class="pesimg"> &nbsp; <strong> Cliente: Rei das Bicicletas</strong>&nbsp;
-                                        <i> - Adicionar o contato do cliente</i>
                                         <img src="{{ asset('site/assets/images/client.png') }}" alt=""/>
                                     </div>
                                 </div>
 
                                 <div class="one_half last">
                                     <div class="pesbox">
-                                        <h5>Como está o atendimento da RC Informática?</h5>
-                                        <p> - Nota 1000.</p>
-                                        <br>
-                                        <h5>Como você caracteriza o nível de conhecimento dos nossos funcionários?</h5>
-                                        <p> - 100% integrados.</p>
-                                        <br>
-                                        <h5>Qual a sua necessidade em relação a informática hoje?</h5>
-                                        <p> - Facilitar a informação de forma rápida e segura.</p>
-                                        <br>
-                                        <h5>Você indicaria nosso produtos a outros clientes?</h5>
-                                        <p> - Com certeza.</p>
+                                        <h5>"Nota 1000. Tudo 100% integrado. Facilita a informação de forma rápida e
+                                            segura."</h5>
                                         <br>
                                     </div>
                                     <div class="pesimg"> &nbsp; <strong>Cliente: Ótica Provisão</strong> &nbsp;
-                                        <i> - Adicionar o contato do cliente</i>
                                         <img src="{{ asset('site/assets/images/client.png') }}" alt=""/>
                                     </div>
                                 </div>
@@ -92,43 +84,22 @@
 
                                 <div class="one_half">
                                     <div class="pesbox">
-                                        <h5>Como está o atendimento da RC Informática?</h5>
-                                        <p> - O atendimento é muito bom, alguns funcionários demonstram muito interesse
-                                            em resolver rapidamente os problemas.</p>
-                                        <br>
-                                        <h5>Como você caracteriza o nível de conhecimento dos nossos funcionários?</h5>
-                                        <p> - Vários funcionários aparentam ter sido muito bem treinados.</p>
-                                        <br>
-                                        <h5>Qual a sua necessidade em relação a informática hoje?</h5>
-                                        <p> - Hoje, precisamos, dentre os principais, controlar nossas entradas e saídas
-                                            de mercadoria, precisamos dos relatórios financeiros, tais como os
-                                            controles de receitas e controle das comissões dos vendedores.</p>
-                                        <br>
-                                        <h5>Você indicaria nosso produtos a outros clientes?</h5>
-                                        <p> - Sim. Sistema indicado para empresas do nosso porte.</p>
+                                        <h5>"O atendimento da RC é muito bom, os funcionários demonstram muito interesse
+                                            em resolver rapidamente os problemas, e aparentam ter sido muito bem
+                                            treinados."</h5>
                                     </div>
-                                    <div class="pesimg"> &nbsp; <strong>- Cliente STB</strong> &nbsp;
-                                        <i> - Adicionar o contato do cliente</i>
+                                    <div class="pesimg"> &nbsp; <strong>Cliente: STB</strong> &nbsp;
                                         <img src="{{ asset('site/assets/images/client.png') }}" alt=""/>
                                     </div>
                                 </div>
 
                                 <div class="one_half last">
                                     <div class="pesbox">
-                                        <h5>Como está o atendimento da RC Informática?</h5>
-                                        <p> - xxxx</p>
+                                        <h5>"Nossa parceria começou há pouco tempo, mas já percebo a qualidade nos
+                                            serviços da RC Informática. Excelente produto e atendimento perfeito."</h5>
                                         <br>
-                                        <h5>Como você caracteriza o nível de conhecimento dos nossos funcionários?</h5>
-                                        <p> - xxx</p>
-                                        <br>
-                                        <h5>Qual a sua necessidade em relação a informática hoje?</h5>
-                                        <p> - xxx.</p>
-                                        <br>
-                                        <h5>Você indicaria nosso produtos a outros clientes?</h5>
-                                        <p> - xxx</p>
                                     </div>
-                                    <div class="pesimg"> &nbsp; <strong>- Cliente XXX</strong> &nbsp;
-                                        <i> - Adicionar o contato do cliente</i>
+                                    <div class="pesimg"> &nbsp; <strong>Cliente: Webmidiaz</strong> &nbsp;
                                         <img src="{{ asset('site/assets/images/client.png') }}" alt=""/>
                                     </div>
                                 </div>
