--- a/app/Resources/views/site/_partials/_header.html.twig
+++ b/app/Resources/views/site/_partials/_header.html.twig
@@ -73,13 +73,13 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#"
+                                        <a href="{{ path('site_experimente') }}"
                                            class="{% if app.request.attributes.get('_route') == 'site_experimente' %}active{% endif %}">
                                             Experimente
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#"
+                                        <a href="{{ path('site_downloads') }}"
                                            class="{% if app.request.attributes.get('_route') == 'site_downloads' %}active{% endif %}">
                                             Downloads
                                         </a>
