--- a/app/Resources/views/site/downloads/index.html.twig
+++ b/app/Resources/views/site/downloads/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'site/base.html.twig' %}
 
 {% block main_container %}
-    <div class="page_title3">
+    <div class="page_title2">
         <div class="container">
-            <div class="title"><h1>DOWNLOADS</h1></div>
+            <div class="title"><h1>DOWNLOADS</h1><br></div>
         </div>
     </div><!-- end page title -->
 {% endblock %}
