--- a/app/Resources/views/admin/_partials/_sidebar.html.twig
+++ b/app/Resources/views/admin/_partials/_sidebar.html.twig
@@ -127,6 +127,12 @@
                             <span class="title">{{ 'admin.banner.title'|trans }}</span>
                         </a>
                     </li>
+                    <li class="nav-item ">
+                        <a href="{{ path('admin_cms_downloads_index') }}" class="nav-link ">
+                            <i class="icon-link"></i>
+                            <span class="title">{{ 'admin.cms_downloads.title'|trans }}</span>
+                        </a>
+                    </li>
                 </ul>
             </li>
         </ul>
