--- a/app/Resources/views/site/downloads/index.html.twig
+++ b/app/Resources/views/site/downloads/index.html.twig
@@ -6,4 +6,53 @@
             <div class="title"><h1>DOWNLOADS</h1><br></div>
         </div>
     </div><!-- end page title -->
+
+    <div class="clearfix"></div>
+
+    <div class="feature_section81">
+        <div class="container">
+
+            {% for d in downloads %}
+
+                <div class="one_third {% if loop.index == 3 %}last{% endif %} animate" data-anim-type="fadeIn">
+
+                    <h4>{{ d.description }}</h4>
+
+                    <img src="{{ vich_uploader_asset(d, 'imageFile') }}" alt="{{ d.imageName }}" class="img_left1"/>
+
+                    <p>{{ d.text }}</p>
+
+                    <br/>
+
+                    <a href="{{ d.url }}" class="lfive" target="_blank">
+                        <i class="fa fa-chevron-circle-right"></i>&nbsp;Baixar
+                    </a>
+
+                </div>
+
+            {% endfor %}
+
+            <div class="clearfix divider_dashed9"></div>
+
+            <div class="pagination">
+                <b>Exibindo {{ downloads.currentPageOffsetStart }} a
+                    {{ downloads.currentPageOffsetEnd }} de
+                    {{ downloads.nbResults }} registros</b>
+                {{ pagerfanta(downloads, 'twitter_bootstrap3',{
+                    routeName: 'site_downloads',
+                    routeParams: app.request.query.all
+                }) }}
+                {#<b>Page 2 of 18</b>
+                <a href="#" class="navlinks">&lt; Previous</a>
+                <a href="#" class="navlinks">1</a>
+                <a href="#" class="navlinks current">2</a>
+                <a href="#" class="navlinks">3</a>
+                <a href="#" class="navlinks">4</a>
+                <a href="#" class="navlinks">Next ></a>#}
+            </div><!-- /# end pagination -->
+
+        </div>
+    </div><!-- end features section81 -->
+
+    <div class="clearfix"></div>
 {% endblock %}
