--- a/app/Resources/views/site/contato/index.html.twig
+++ b/app/Resources/views/site/contato/index.html.twig
@@ -16,6 +16,8 @@
 
             <h2 class="caps">
                 Nos envie uma <strong>Mensagem!</strong>
+                <b>Se você tem alguma dúvida ou precisa de mais informações, entre em contato conosco através
+                    do formulário abaixo. Teremos prazer em atendê-lo.</b>
             </h2>
 
             <div class="clearfix margin_top2"></div>
